--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "next": "15.3.3",
     "openai": "^5.11.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@babel/core": "^7.27.4",
